[package]
name = "turtlers"
version = "0.1.0"
authors = ["Ali Leino <ali.leino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3"}
# reqwest = {version = "0.10.9"}
# tokio = {version="0.3.4"}
serde_json = {version="*"}
tungstenite = "0.11.1"
thiserror  = "1.0.22"
anyhow = "1.0.36"
serde = "1.0.118"
serde_derive = "1.0.118"